--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<ul>
 		<li><b>Use strong password</b></li>
 			<ul>
-				<li>Be sure not to use your name, your dog's name, your birthdate, or anything that can easily be guessed as a password.</li>
+				<li>Be sure not to use your name, your pet's name, your birthdate, or anything that can easily be guessed as a password.</li>
 				<li>Don't use the same pasword in different accounts, especially on important ones.</li>
 			</ul>
 		<li><b>Do not trust easily</b></li>
