--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 	<br><br><br>
 	<hr>
-
+	<h2 class="myInfo">Say Hi!</h2>
 	<div class="contact">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<a href="https://www.facebook.com/mauiazryl.lomuntad.5" class="fa fa-facebook"></a>
